objects/CN_Business_Unit__c.object
<CustomObject>
    <fields>
        <fullName>CN_Business_Unit_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Business Unit Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CN_City_API__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Is_Activated__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Active__c</fullName>
        <formula>ISPICKVAL(CN_Sync_Status__c , &apos;Success&apos;) &amp;&amp;  CN_Is_Activated__c</formula>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Sync_Error_Message__c</fullName>
        <label>Sync Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Sync_Status__c</fullName>
        <label>Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Sync_Time__c</fullName>
        <label>Sync Time</label>
        <type>DateTime</type>
    </fields>
    <label>Business Unit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CN_Business_Unit_Code__c</columns>
        <columns>CN_Is_Activated__c</columns>
        <columns>CN_Sync_Status__c</columns>
        <columns>CN_Sync_Time__c</columns>
        <columns>CN_Sync_Error_Message__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Units</pluralLabel>
    <recordTypes>
        <fullName>CN_Business_Unit</fullName>
        <active>true</active>
        <label>CN Business Unit</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>